@@ -1,3 +1,10 @@
+Version 27     ???
+
+--Fixed CANNOT JOIN message for tournaments when you can't afford it
+  (thanks ..).
+
+
+
 Version 26     Live Server Fixes
 
 --Improved profit ratio and won/lost leaderboard formula to be less biased
